Gtk-3.20&3.22&4.0: [Corebird] Fix truncated drop-shadows behind the 'Retry' button
Add bottom spacing via margin property to reserve the area of drop-shadows.

--- a/gtk/sass/3.22/_3rd-party.scss
+++ b/gtk/sass/3.22/_3rd-party.scss
@@ -1375,6 +1375,12 @@ headerbar.titlebar box {
   }
 }
 
+scrolledwindow > viewport.frame > list.stream > stack {
+  > box.vertical > button.text-button { // 'Retry' button
+    margin-bottom: rem(13.3px, $sw: 1.0);
+  }
+}
+
 
 // /********
 //  * Nemo *
